RESOLVED FIXED193564
[LFC][BFC][MarginCollapsing] Collapsing through should not ignore floats.
https://bugs.webkit.org/show_bug.cgi?id=193564
Summary [LFC][BFC][MarginCollapsing] Collapsing through should not ignore floats.
alan
Reported 2019-01-17 22:14:34 PST
ssia
Attachments
Patch (5.63 KB, patch)
2019-01-17 22:17 PST, alan
koivisto: review+
alan
Comment 1 2019-01-17 22:17:25 PST
Antti Koivisto
Comment 2 2019-01-18 06:28:31 PST
Comment on attachment 359451 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=359451&action=review > LayoutTests/fast/block/float/float-in-descendant-formatting-context-expected.txt:9 > +layer at (0,0) size 800x600 > + RenderView at (0,0) size 800x600 > +layer at (0,0) size 800x26 > + RenderBlock {HTML} at (0,0) size 800x26 > + RenderBody {BODY} at (8,8) size 784x10 > +layer at (8,8) size 784x10 > + RenderBlock {DIV} at (0,0) size 784x10 > + RenderInline {SPAN} at (0,0) size 0x0 > + RenderBlock (floating) {DIV} at (0,0) size 10x10 Could we do ref tests instead? Render tree dumps are bit weird for testing something that ultimately won't have render tree.
alan
Comment 3 2019-01-18 06:42:52 PST
Radar WebKit Bug Importer
Comment 4 2019-01-18 06:43:27 PST
alan
Comment 5 2019-01-18 11:11:46 PST
(In reply to Antti Koivisto from comment #2) > Comment on attachment 359451 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=359451&action=review > > > LayoutTests/fast/block/float/float-in-descendant-formatting-context-expected.txt:9 > > +layer at (0,0) size 800x600 > > + RenderView at (0,0) size 800x600 > > +layer at (0,0) size 800x26 > > + RenderBlock {HTML} at (0,0) size 800x26 > > + RenderBody {BODY} at (8,8) size 784x10 > > +layer at (8,8) size 784x10 > > + RenderBlock {DIV} at (0,0) size 784x10 > > + RenderInline {SPAN} at (0,0) size 0x0 > > + RenderBlock (floating) {DIV} at (0,0) size 10x10 > > Could we do ref tests instead? Render tree dumps are bit weird for testing > something that ultimately won't have render tree. In certain cases when testing against geometry it is actually more reliable to dump the box geometry and match against that (especially at this phase of the project and with this type of content). However I agree that the dumps in this format are not optimal/future-proof. That we should definitely change.
Note You need to log in before you can comment on or make changes to this bug.