[LFC][BFC][MarginCollapsing] Collapsing through should not ignore floats. https://bugs.webkit.org/show_bug.cgi?id=193564

Reviewed by Antti Koivisto.

Source/WebCore:

Float boxes prevent collapsing through.

Test: fast/block/float/float-in-descendant-formatting-context.html

* layout/blockformatting/BlockMarginCollapse.cpp:
(WebCore::Layout::BlockFormattingContext::MarginCollapse::marginsCollapseThrough):

Tools:

* LayoutReloaded/misc/LFC-passing-tests.txt:

LayoutTests:

* fast/block/float/float-in-descendant-formatting-context-expected.txt: Added.
* fast/block/float/float-in-descendant-formatting-context.html: Added.

Canonical link: https://commits.webkit.org/208072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240146 268f45cc-cd09-0410-ab3c-d52691b4dbfc